<resources>
	<string name="app_name">Exercise2</string>
	<string name="heading_text">Exercise 2 Going MAD!</string>

	<string name="email_text_hint">Your email</string>
	<string name="name_text_hint">Your name</string>
	<string name="number_text_hint">Your phone</string>
	<string name="agreement_checkbox_text">I Agree</string>

	<string name="submit_button_text">Submit</string>
	<string name="clear_button_text">Clear All</string>
	<string name="exit_button_text">Exit</string>

	<string name="snackbar_disagree">I Disagree</string>
	<string name="snackbar_agree">I Agree</string>

	<string-array name="phone_types">
		<item>Home</item>
		<item>Work</item>
		<item>Mobile</item>
	</string-array>
</resources>