<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/coordinatorLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<android.support.constraint.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context="com.mad.exercise2.MainActivity"
		tools:layout_editor_absoluteX="0dp"
		tools:layout_editor_absoluteY="81dp">

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_marginBottom="8dp"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp"
			android:layout_marginTop="8dp"
			android:orientation="vertical"
			android:weightSum="1"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				tools:layout_editor_absoluteX="8dp"
				tools:layout_editor_absoluteY="8dp">

				<ImageView
					android:id="@+id/imageIcon"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1.17"
					app:srcCompat="@mipmap/ic_launcher"/>

				<TextView
					android:id="@+id/InfoText"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_weight="3.06"
					android:text="@string/heading_text"
					android:textAlignment="center"
					android:textSize="20sp"
					android:textStyle="bold"/>
			</LinearLayout>

			<EditText
				android:id="@+id/nameText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:hint="@string/name_text_hint"
				android:inputType="textPersonName"
				/>

			<EditText
				android:id="@+id/emailText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:hint="@string/email_text_hint"
				android:inputType="textEmailAddress"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<EditText
					android:id="@+id/numberText"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:ems="10"
					android:hint="@string/number_text_hint"
					android:inputType="number|phone"/>

				<Spinner
					android:id="@+id/numberTypeDropdown"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:entries="@array/phone_types"
					android:spinnerMode="dropdown"/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:gravity="bottom"
				android:orientation="horizontal"
				>

				<Button
					android:id="@+id/submitButton"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:onClick="submitButtonClickHandler"
					android:text="@string/submit_button_text"/>

				<Button
					android:id="@+id/clearAllButton"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:onClick="clearButtonClickHandler"
					android:text="@string/clear_button_text"/>

				<Button
					android:id="@+id/exitButton"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:onClick="exitButtonClickHandler"
					android:text="@string/exit_button_text"/>

			</LinearLayout>

		</LinearLayout>
	</android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>